[gd_scene load_steps=63 format=3 uid="uid://b2udxtkp2man6"]

[ext_resource type="Script" uid="uid://cmaiimbwfqwcl" path="res://scripts/prota.gd" id="1_sfphj"]
[ext_resource type="PackedScene" uid="uid://diks1heoo45ew" path="res://tools/gas_projectile.tscn" id="2_6ptbh"]
[ext_resource type="Texture2D" uid="uid://hs4hgmmwgnwh" path="res://assets/Sprites/Death_Side-Sheet.png" id="2_vtxll"]
[ext_resource type="Texture2D" uid="uid://n1bgnlh3ka2p" path="res://assets/Sprites/luz.webp" id="3_kthid"]
[ext_resource type="Texture2D" uid="uid://bxm2mdbwfmmh2" path="res://assets/Sprites/Run_Down-Sheet.png" id="3_ym2kn"]
[ext_resource type="Script" uid="uid://v7jxn1htsd8e" path="res://scripts/hud.gd" id="4_8v4ht"]
[ext_resource type="Texture2D" uid="uid://vu4l5x5kufbq" path="res://assets/Sprites/Idle_Down-Sheet.png" id="4_vtxll"]
[ext_resource type="Texture2D" uid="uid://c1pfclvcxptw3" path="res://assets/ui/full_heart.png.png" id="5_4y2i1"]
[ext_resource type="Texture2D" uid="uid://cixjb1phlwrbn" path="res://assets/Sprites/Idle_Side-Sheet.png" id="5_s1iqd"]
[ext_resource type="Texture2D" uid="uid://b5oe2grd3mqm5" path="res://assets/Sprites/Idle_Up-Sheet (1).png" id="6_6ptbh"]
[ext_resource type="Texture2D" uid="uid://b84a1sy4on37j" path="res://assets/ui/empty_heart.png.png" id="6_ogt8j"]
[ext_resource type="FontFile" uid="uid://b4w1mb76adnv4" path="res://assets/ui/Creepster-Regular.ttf" id="7_4y2i1"]
[ext_resource type="Texture2D" uid="uid://jbxatjyuu0rr" path="res://assets/Sprites/Run_Side-Sheet.png" id="7_uk4ck"]
[ext_resource type="Texture2D" uid="uid://cyt7kav3qtwld" path="res://assets/Sprites/Run_Up-Sheet (1).png" id="8_gonb2"]
[ext_resource type="Texture2D" uid="uid://b8kd5jbe3avle" path="res://assets/Sprites/spray1.png" id="14_s1iqd"]
[ext_resource type="AudioStream" uid="uid://sdon4ahhm0ec" path="res://assets/audio/Efeito Sonoro Grito do Tom.mp3" id="14_vtxll"]
[ext_resource type="Texture2D" uid="uid://ul53g5qcvjv" path="res://assets/ui/gdb-xbox-2.png" id="16_86n0t"]
[ext_resource type="AudioStream" uid="uid://df7qtmjx6ef4s" path="res://assets/audio/Spray.mp3" id="17_uk4ck"]
[ext_resource type="Texture2D" uid="uid://chmrm4v7pp4t0" path="res://assets/ui/New Piskel.png" id="18_gonb2"]
[ext_resource type="AudioStream" uid="uid://cayuaclt8vsvs" path="res://assets/audio/andar.mp3" id="19_j4uu1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4a3fb"]
size = Vector2(16, 16.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1iqd"]
atlas = ExtResource("2_vtxll")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ptbh"]
atlas = ExtResource("2_vtxll")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk4ck"]
atlas = ExtResource("2_vtxll")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gonb2"]
atlas = ExtResource("2_vtxll")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpoab"]
atlas = ExtResource("2_vtxll")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsgua"]
atlas = ExtResource("2_vtxll")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p71t4"]
atlas = ExtResource("2_vtxll")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkpwk"]
atlas = ExtResource("2_vtxll")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4uu1"]
atlas = ExtResource("3_ym2kn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_86n0t"]
atlas = ExtResource("3_ym2kn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vaqx"]
atlas = ExtResource("3_ym2kn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4uu3"]
atlas = ExtResource("3_ym2kn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_luhlb"]
atlas = ExtResource("3_ym2kn")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_821w2"]
atlas = ExtResource("3_ym2kn")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldhcr"]
atlas = ExtResource("4_vtxll")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3yeh"]
atlas = ExtResource("4_vtxll")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqqv0"]
atlas = ExtResource("4_vtxll")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwrs5"]
atlas = ExtResource("4_vtxll")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmatm"]
atlas = ExtResource("5_s1iqd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4coxd"]
atlas = ExtResource("5_s1iqd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrlys"]
atlas = ExtResource("5_s1iqd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qyyh"]
atlas = ExtResource("5_s1iqd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kkam"]
atlas = ExtResource("6_6ptbh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqemb"]
atlas = ExtResource("6_6ptbh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_of225"]
atlas = ExtResource("6_6ptbh")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vo43"]
atlas = ExtResource("6_6ptbh")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3f53"]
atlas = ExtResource("7_uk4ck")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyxja"]
atlas = ExtResource("7_uk4ck")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5e3xa"]
atlas = ExtResource("7_uk4ck")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulfow"]
atlas = ExtResource("7_uk4ck")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddxaq"]
atlas = ExtResource("7_uk4ck")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2dhk"]
atlas = ExtResource("7_uk4ck")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_86jcb"]
atlas = ExtResource("8_gonb2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0lco"]
atlas = ExtResource("8_gonb2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxc2q"]
atlas = ExtResource("8_gonb2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggb57"]
atlas = ExtResource("8_gonb2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpnbx"]
atlas = ExtResource("8_gonb2")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlft3"]
atlas = ExtResource("8_gonb2")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jlg71"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1iqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ptbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk4ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gonb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpoab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsgua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p71t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkpwk")
}],
"loop": false,
"name": &"death_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4uu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86n0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vaqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4uu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luhlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_821w2")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldhcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3yeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqqv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwrs5")
}],
"loop": true,
"name": &"idledown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmatm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4coxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrlys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qyyh")
}],
"loop": true,
"name": &"idleside",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kkam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqemb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of225")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vo43")
}],
"loop": true,
"name": &"idleup",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3f53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyxja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5e3xa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulfow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddxaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2dhk")
}],
"loop": true,
"name": &"side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86jcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0lco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxc2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggb57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpnbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlft3")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4y2i1"]
bg_color = Color(1, 1, 1, 0.270588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogt8j"]
bg_color = Color(2.40654e-06, 0.709321, 0.486783, 1)

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_mask = 4
script = ExtResource("1_sfphj")
gas_projectile_scene = ExtResource("2_6ptbh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.25)
shape = SubResource("RectangleShape2D_4a3fb")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jlg71")
animation = &"death_side"
frame = 7
frame_progress = 1.0

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-1, 9)
scale = Vector2(0.603516, 0.580415)
range_z_min = -1028
range_z_max = 1028
texture = ExtResource("3_kthid")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="HUD" type="Node2D" parent="." groups=["HUD"]]
position = Vector2(280, 0)
script = ExtResource("4_8v4ht")
full_heart = ExtResource("5_4y2i1")
empty_heart = ExtResource("6_ogt8j")

[node name="Hearts" type="CanvasLayer" parent="HUD"]

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Hearts"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 25.0
grow_horizontal = 0

[node name="heart1" type="TextureRect" parent="HUD/Hearts/HBoxContainer"]
layout_mode = 2

[node name="heart2" type="TextureRect" parent="HUD/Hearts/HBoxContainer"]
layout_mode = 2

[node name="heart3" type="TextureRect" parent="HUD/Hearts/HBoxContainer"]
layout_mode = 2

[node name="Death_text" type="CanvasLayer" parent="HUD"]
layer = 100

[node name="RespawnLabel" type="Label" parent="HUD/Death_text"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -11.5
offset_right = 82.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.712129, 0.712129, 0.712129, 1)
theme_override_fonts/font = ExtResource("7_4y2i1")
text = "Pressione Y para voltar
pro menu"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Death" type="Label" parent="HUD/Death_text"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.0
offset_top = 30.0
offset_right = 65.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.435294, 0, 0, 0.839216)
theme_override_colors/font_shadow_color = Color(0, 0.291518, 0.111208, 1)
theme_override_fonts/font = ExtResource("7_4y2i1")
theme_override_font_sizes/font_size = 25
text = "Você morreu!"

[node name="Estamina" type="CanvasLayer" parent="HUD"]

[node name="ProgressBar" type="ProgressBar" parent="HUD/Estamina"]
offset_left = 319.0
offset_top = 30.0
offset_right = 347.0
offset_bottom = 35.0
rotation = 3.14159
theme_override_styles/background = SubResource("StyleBoxFlat_4y2i1")
theme_override_styles/fill = SubResource("StyleBoxFlat_ogt8j")
max_value = 80.0
show_percentage = false

[node name="Spray" type="CanvasLayer" parent="HUD"]

[node name="SprayUI" type="HBoxContainer" parent="HUD/Spray"]
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="HUD/Spray/SprayUI"]
layout_mode = 2
texture = ExtResource("14_s1iqd")

[node name="AmmoLabel" type="Label" parent="HUD/Spray/SprayUI"]
layout_mode = 2

[node name="notificantion_inputs" type="CanvasLayer" parent="HUD"]

[node name="NotificationBox" type="VBoxContainer" parent="HUD/notificantion_inputs"]
offset_left = 160.0
offset_top = 33.0
offset_right = 480.0
offset_bottom = 195.0
scale = Vector2(0.5, 0.5)

[node name="Line1" type="Label" parent="HUD/notificantion_inputs/NotificationBox"]
layout_mode = 2
text = "sdfeasdqwdsdwdawdasdwad"
horizontal_alignment = 2
justification_flags = 162

[node name="Line2" type="Label" parent="HUD/notificantion_inputs/NotificationBox"]
layout_mode = 2
text = "sdfeasdqwdsdwdawdasdwad"
horizontal_alignment = 2
justification_flags = 162

[node name="Line3" type="Label" parent="HUD/notificantion_inputs/NotificationBox"]
layout_mode = 2
text = "sdfeasdqwdsdwdawdasdwad"
horizontal_alignment = 2
justification_flags = 162

[node name="Line4" type="Label" parent="HUD/notificantion_inputs/NotificationBox"]
layout_mode = 2
text = "sdfeasdqwdsdwdawdasdwad"
horizontal_alignment = 2
justification_flags = 162

[node name="InteractionPrompt" type="TextureRect" parent="HUD"]
offset_left = -145.0
offset_top = 101.0
offset_right = -105.0
offset_bottom = 141.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("16_86n0t")

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_vtxll")

[node name="SpraySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_uk4ck")

[node name="AimPointer" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("18_gonb2")

[node name="AudioAndar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_j4uu1")
volume_db = -16.838
